hphp/test/zend/good/ext/gd/tests/imagewbmp.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!function_exists('imagecreatefromwbmp')) die("skip gd extension not available\n");
}
