hphp/test/zend/bad/ext/pgsql/tests/25async_query_params.php.skipif
<?php
include("skipif.inc");
if (!function_exists('pg_send_query_params')) die('skip function pg_send_query_params() does not exist');
?>